fixed overflow issue

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,3 +1,7 @@
+body {
+    min-width: 320px;
+}
+
 a.navbar-item {
     font-size: large;
     color: black;
